--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -872,3 +872,7 @@ blockquote {
 .filter-controls li.active {
   font-weight: 700
 }
+
+.emoji {
+  font-family: Apple Color Emoji,Segoe UI Emoji,NotoColorEmoji,Segoe UI Symbol,Android Emoji,EmojiSymbols;
+  }
