--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ VERSION: Versoin Number
   font-family: bwnistaint-xbd;
   src: url(../fonts/BwNistaInt-xBd.woff) format("woff");
   font-style: normal;
-  font-display: swap
+  font-display: swap;
 }
 
 body {
@@ -174,11 +174,12 @@ body {
   justify-content: center
 }
 
-ol,
-ul {
-  list-style-type: none;
+/* ol,
+ul,
+li {
+  list-style-type: circle;
   margin: 0
-}
+} */
 
 img {
   vertical-align: middle;
@@ -1851,7 +1852,7 @@ blockquote {
 }
 
 .markdown-body .task-list-item {
-  list-style-type: none;
+  list-style-type: circle;
 }
 
 .markdown-body .task-list-item+.task-list-item {
