--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -938,11 +938,11 @@ blockquote {
 }.markdown-body {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  line-height: 1.5;
-  color: #24292e;
+  line-height: 1.2;
+  color: #4c4c4c;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif,Apple Color Emoji,Segoe UI Emoji;
-  font-size: 16px;
-  line-height: 1.5;
+  font-size: 15px;
+  line-height: 1.2;
   word-wrap: break-word;
 }
 
