--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -601,6 +601,15 @@ textarea.form-control {
   color: #fff
 }
 
+.active-bg-warning {
+  transition: .3s ease;
+  background: #f8cf02
+}
+
+.active-bg-warning * {
+  color: rgb(0, 0, 0)
+}
+
 .hover-shadow {
   transition: .2s ease
 }
