--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,12 +86,12 @@ h6,
 }
 
 .btn {
-  font-size: 22px;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 15px;
+  font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
   text-transform: capitalize;
   padding: 16px 44px;
   border-radius: 5px;
-  font-weight: 400;
+  font-weight: 0;
   border: 0;
   position: relative;
   z-index: 1;
