--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1882,3 +1882,10 @@ blockquote {
     width: 100%;
   }
 }
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
