--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@ h6,
 .btn {
   font-size: 15px;
   font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
-  text-transform: capitalize;
+  /* text-transform: capitalize; */
   padding: 16px 44px;
   border-radius: 5px;
   font-weight: 0;
